# ETF-screener

./: .bandit  .gitignore  API.md  DSL_SPEC.md  README.md  __matrix_run.ps1  _diag_out.txt  auto-refresh-nightly.ps1  commands.json  ensure-venv.ps1  nightly_refresh.bat  output_formats.json  pi_cron_job.txt  plan.md  preview.ps1  profile.ps1  progress.md  pyproject.toml  requirements.txt  run.ps1  run_all_tests.ps1  run_churn.ps1  run_churn_all.ps1  run_custom_backtest.ps1  run_dashboard.ps1  run_discovery.ps1  run_filtered_plots.ps1  run_movie_scan.ps1  run_vulture.ps1  setup_pi.sh  snippets.ipynb  update-devtools.ps1  vulture_whitelist.py  workflow_end_of_day.ps1  workflow_milestone.ps1  workflow_update_plan_progress.ps1
config/: blacklist.json  commands.json  custom_ticker_list.json  etfs.json  nasdaq.json  paths.json  ribbon_settings.json  scanner_settings.json  swarm_agent_dna.json  sweden.csv  sweden.json  xetra.json
debug_scripts/: fetch_bak.py  update_etf_names.py
logs/: hotlist_20260303_185111.txt
plan/: blockers-and-risks.md  current-state.md  locked-decisions.md  next-steps.md
reference/: .~lock.t7-xetr-allTradableInstruments.csv#  DSL_SPEC.md  swedish_equities_option_A.csv  t7-xetr-allTradableInstruments.csv
scripts/: analyze_test_logs.py  auto-refresh-nightly.ps1  generate_nasdaq_universe.py  run_all_tests.ps1  run_churn.ps1  run_churn_all.ps1  run_custom_backtest.ps1  run_dashboard.ps1  run_discovery.ps1  run_filtered_plots.ps1  run_movie_scan.ps1  run_vulture.ps1  setup-startup-refresh.ps1  startup-refresh.ps1  update-devtools.ps1  workflow_end_of_day.ps1  workflow_milestone.ps1  workflow_update_plan_progress.ps1
snippets/: README.md  auto_fetch.py  ema_cross.py  ema_slope.py  overbought.py  overbought_period.py  oversold.py  oversold_period.py  rsi_ema.py
src/ETF_screener/: __init__.py  backtester.py  config_loader.py  data_fetcher.py  database.py  delisting_tracker.py  dsl_parser.py  etf_discovery.py  google_drive_exports.py  hotlist.py  indicators.py  logging_setup.py  main.py  market_data_service.py  plotter.py  plotter_plotly.py  query_service.py  screener.py  screener_api.py  shortlist_engine.py  snippets.py  storage.py  strategy_manager.py  swarm_world.py  xetra_extractor.py  yfinance_fetcher.py
src/ETF_screener.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/ETF_screener/dashboard/: app.py  app_fast.py
src/ETF_screener/scripts/: auto-refresh.bat  auto-refresh.ps1  churn_strategies.py  ensure-venv.ps1  movie_scanner.py  profile.ps1  results  setup-auto-refresh-task.ps1  update-devtools.ps1
src/etfs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
strategies/: anchored_vwap_reclaim.dsl  avwap_ema20_pullback_reversal.dsl  buy_the_dip.dsl  buy_the_dip_v2.dsl  ema_breakout_fanout.dsl  ema_breakout_fanout_v2.dsl  ema_breakout_fanout_v3.dsl  ema_breakout_fanout_v4.dsl  ema_breakout_fanout_v5.dsl  epi_a_st_fanout_phase.dsl  loose_trend.dsl  macd_momentum.dsl  macd_momentum_slope.dsl  macd_momentum_slope_vol.dsl  macd_trend_filtered.dsl  mixed.dsl  pure_macd.dsl  rsi_risk_mitigated.dsl  rsi_trend_filtered.dsl  st_breakdown.dsl  super_loose.dsl  supertrend_continuation.dsl  supertrend_continuation_v2.dsl  supertrend_red_to_green_ema50_crossup.dsl  supertrend_st_crossdown_ema50_slope_turnup.dsl  volume_macd.dsl
strategies/archive/: volume_macd.dsl  volume_tsi.dsl
strategies/strat_cache/: macd_momentum_slope.dsl  master_template.dsl  pure_rsi.dsl  pure_stoch.dsl  rsi_ema.dsl  stoch_trend_filtered.dsl  trend_intensity.dsl
tests/: conftest.py  manual_plot_jupi.py  test_backtester.py  test_churn_strategies.py  test_config_json_syntax.py  test_dashboard_api.py  test_dashboard_js.py  test_dashboard_playwright.py  test_data_fetcher.py  test_database.py  test_dsl_parser.py  test_dsl_robustness.py  test_indicators.py  test_market_data_service.py  test_movie_scanner.py  test_plotter.py  test_plotter_plotly.py  test_query_service.py  test_run_ps1_matrix.py  test_shortlist_engine.py  test_storage.py  test_strategy_manager.py  test_strategy_structure_profile.py  test_swarm_world_engine.py  test_xetra_extractor.py
tests/archive/: manual_plot_jupi.py  test_plotter.py  test_storage.py
tests/powershell/: run_all_tests.options.Tests.ps1
(+4 files in other folders)
