[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etfs"
version = "0.1.0"
description = "Technical analysis tool for swing trading ETFs using Finnhub API with Supertrend & EMA indicators"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
[project.urls]
Homepage = "https://github.com/carlr/ETF-screener"

[project.scripts]
etfs = "ETF_screener.main:main"

[tool.setuptools]
packages = ["ETF_screener"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
ETF_screener = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?ls'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".venv", "build", "dist", "*.egg-info"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pylint.messages_control]
disable = ["C0111"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--tb=short -v"
