[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etfs"
version = "0.1.0"
description = "Technical analysis tool for swing trading ETFs using Finnhub API with Supertrend & EMA indicators"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "google-api-python-client>=2.137.0,<3.0.0",
    "google-auth>=2.34.0,<3.0.0",
    "httpx>=0.25.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "plotly>=6.0.0,<7.0.0",
    "pyarrow>=14.0.0,<15.0.0",
    "requests>=2.32.3,<3.0.0",
    "ta>=0.10.0,<1.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "uvicorn>=0.23.0,<1.0.0",
    "yfinance>=0.2.28,<1.0.0",
]
[project.urls]
Homepage = "https://github.com/carlr/ETF-screener"

[project.scripts]
etfs = "ETF_screener.main:main"

[tool.setuptools]
packages = ["ETF_screener"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
ETF_screener = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".venv", "build", "dist", "*.egg-info"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pylint.messages_control]
disable = ["C0111"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--tb=short -v"
